Refactor code, renamed methods of cli and added point update after gold card played